# stargraphics

./: CMakeLists.txt  Doxyfile
include/: StarGraphics.h
include/StarGraphics/: StarApplication.h  StarApplicationDX10.h  StarApplicationSDL.h  StarRenderDevice.h  StarRenderDeviceDX10.h  StarRenderableInterface.h  StarVertex.h  StarVertexLayout.h
include/StarGraphics/objects/: StarCube.h  StarObject.h
src/: CMakeLists.txt  StarApplication.cpp  StarApplicationDX10.cpp  StarApplicationSDL.cpp  StarRenderDeviceDX10.cpp  StarVertexLayout.cpp
src/objects/: StarCube.cpp
tests/: CMakeLists.txt
tests/emptyApp/: CMakeLists.txt  emptyApp.cpp  emptyApp.h  main.cpp
tests/simpleEvent/: CMakeLists.txt  main.cpp  simpleEvent.cpp  simpleEvent.h
tests/simpleEventDX10/: CMakeLists.txt  main.cpp  simpleEventDX10.cpp  simpleEventDX10.h
tests/simpleTrackballDX10/: CMakeLists.txt  cube.fx  simpleTrackballDX10.cpp  simpleTrackballDX10.h
