project(StarGraphics)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
ENABLE_TESTING()

if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
message(FATAL_ERROR "CMake generation is not allowed within the source directory! 
Remove the CMakeCache.txt file and try again from another folder, e.g.: 

   rm CMakeCache.txt 
   cd ..
   mkdir cmake-make 
   cd cmake-make
   cmake -G \"Unix Makefiles\" ../starmath
")
endif(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})


include(cmake/FindStarMath.cmake)
include(cmake/FindCxxTest.cmake)
include(FindDoxygen)

if(NOT STARMATH_INCLUDE_FOUND)
  message(FATAL_ERROR "StarMath include directory not found")
endif(NOT STARMATH_INCLUDE_FOUND)

set(STARMATH_LIB "StarMath")
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/lib)

include_directories (${STARMATH_INCLUDE_DIR})
add_subdirectory(src)
add_subdirectory(unitTest)
add_subdirectory(include)

if (DOXYGEN_FOUND)
  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
  add_custom_target(doc ${DOXYGEN_EXECUTABLE} ${DOXY_CONFIG})
endif(DOXYGEN_FOUND)
